PROD-9647 - Fix notice field spacing issue

--- a/src/js/admin/settings-2.0/styles/scss/screens/_feature_settings.scss
+++ b/src/js/admin/settings-2.0/styles/scss/screens/_feature_settings.scss
@@ -175,6 +175,10 @@
     &:last-child {
         padding-bottom: 0;
         border-bottom: none;
+
+        .bb-admin-notice {
+            margin-bottom: 0;
+        }
     }
 
     + .bb-admin-settings-form__field {
